--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,7 +3,9 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=Firebasetest
+application.desc=Fastest Chat App
+application.splash=C:\\Users\\Sijan\\Documents\\asklogo-black (1).png
+application.title=AskChat
 application.vendor=Sijan
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -25,7 +27,7 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Firebasetest.jar
+dist.jar=${dist.dir}/AskChat.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
@@ -106,10 +108,13 @@ file.reference.proto-google-iam-v1-1.0.14.jar=lib/proto-google-iam-v1-1.0.14.jar
 file.reference.protobuf-java-3.17.3.jar=lib/protobuf-java-3.17.3.jar
 file.reference.protobuf-java-util-3.17.3.jar=lib/protobuf-java-util-3.17.3.jar
 file.reference.RojeruSan.full_9.6.jar=lib/RojeruSan.full_9.6.jar
-file.reference.slf4j-api-1.7.32.jar=lib/slf4j-api-1.7.32.jar
+file.reference.slf4j-simple-1.6.1.jar=lib/slf4j-simple-1.6.1.jar
+file.reference.slf4j.api-1.6.1.jar=lib/slf4j.api-1.6.1.jar
 file.reference.threetenbp-1.5.1.jar=lib/threetenbp-1.5.1.jar
 includes=**
-jar.compress=false
+jar.archive.disabled=${jnlp.enabled}
+jar.compress=true
+jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.animal-sniffer-annotations-1.20.jar}:\
     ${file.reference.annotations-4.1.1.4.jar}:\
@@ -185,11 +190,12 @@ javac.classpath=\
     ${file.reference.proto-google-iam-v1-1.0.14.jar}:\
     ${file.reference.protobuf-java-3.17.3.jar}:\
     ${file.reference.protobuf-java-util-3.17.3.jar}:\
-    ${file.reference.slf4j-api-1.7.32.jar}:\
     ${file.reference.threetenbp-1.5.1.jar}:\
     ${file.reference.RojeruSan.full_9.6.jar}:\
     ${file.reference.jna-3.0.9.jar}:\
-    ${file.reference.jna-3.3.0-platform.jar}
+    ${file.reference.jna-3.3.0-platform.jar}:\
+    ${file.reference.slf4j.api-1.6.1.jar}:\
+    ${file.reference.slf4j-simple-1.6.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -204,7 +210,7 @@ javac.test.classpath=\
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
-javadoc.author=false
+javadoc.author=true
 javadoc.encoding=${source.encoding}
 javadoc.noindex=false
 javadoc.nonavbar=false
@@ -212,9 +218,26 @@ javadoc.notree=false
 javadoc.private=false
 javadoc.splitindex=true
 javadoc.use=true
-javadoc.version=false
-javadoc.windowtitle=
-main.class=gr.istl.collaborativechat.ui.Login
+javadoc.version=true
+javadoc.windowtitle=AskChat
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
+main.class=UI.Login
+# Optional override of default Application-Library-Allowable-Codebase attribute identifying the locations where your signed RIA is expected to be found.
+manifest.custom.application.library.allowable.codebase=
+# Optional override of default Caller-Allowable-Codebase attribute identifying the domains from which JavaScript code can make calls to your RIA without security prompts.
+manifest.custom.caller.allowable.codebase=
+# Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
+manifest.custom.codebase=
+# Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
+manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
