--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,6 @@ jmav-2bc1e-firebase-adminsdk-i8nm4-06575f36cb.json
 settings.xml
 build/
 /dist
+/dist/lib
 serverfile.json
 build/built-jar.properties
