--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ src/jmav-2bc1e-firebase-adminsdk-i8nm4-06575f36cb.json
 src/settings.xml
 jmav-2bc1e-firebase-adminsdk-i8nm4-06575f36cb.json
 settings.xml
-build/
-dist
+build/**
+dist/lib/**
 serverfile.json
 build/built-jar.properties
