--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -7,6 +7,7 @@ application.desc=Fastest Chat App
 application.splash=C:\\Users\\Sijan\\Documents\\asklogo-black (1).png
 application.title=AskChat
 application.vendor=Sijan
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
