Updated with Online Users Count

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -22,8 +22,12 @@ build.test.results.dir=${build.dir}/test/results
 #debug.transport=dt_socket
 debug.classpath=\
     ${run.classpath}
+debug.modulepath=\
+    ${run.modulepath}
 debug.test.classpath=\
     ${run.test.classpath}
+debug.test.modulepath=\
+    ${run.test.modulepath}
 # Files in build.classes.dir which should be excluded from distribution jar
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
@@ -37,9 +41,11 @@ file.reference.annotations-4.1.1.4.jar=lib/annotations-4.1.1.4.jar
 file.reference.apache-logging-log4j.jar=lib/apache-logging-log4j.jar
 file.reference.api-common-1.10.4.jar=lib/api-common-1.10.4.jar
 file.reference.auto-value-annotations-1.8.1.jar=lib/auto-value-annotations-1.8.1.jar
+file.reference.bsh-2.0b5.jar=lib/bsh-2.0b5.jar
 file.reference.checker-compat-qual-2.5.5.jar=lib/checker-compat-qual-2.5.5.jar
 file.reference.commons-codec-1.15.jar=lib/commons-codec-1.15.jar
 file.reference.commons-logging-1.1.3.jar=lib/commons-logging-1.1.3.jar
+file.reference.commons-logging-1.2.1.1.jar=../commons-logging-1.2.1.1.jar/commons-logging-1.2.1.1.jar
 file.reference.commons-logging-1.2.jar=lib/commons-logging-1.2.jar
 file.reference.conscrypt-openjdk-uber-2.5.1.jar=lib/conscrypt-openjdk-uber-2.5.1.jar
 file.reference.error_prone_annotations-2.7.1.jar=lib/error_prone_annotations-2.7.1.jar
@@ -122,6 +128,7 @@ javac.classpath=\
     ${file.reference.apache-logging-log4j.jar}:\
     ${file.reference.api-common-1.10.4.jar}:\
     ${file.reference.auto-value-annotations-1.8.1.jar}:\
+    ${file.reference.commons-logging-1.2.1.1.jar}:\
     ${file.reference.checker-compat-qual-2.5.5.jar}:\
     ${file.reference.commons-codec-1.15.jar}:\
     ${file.reference.commons-logging-1.1.3.jar}:\
@@ -196,11 +203,14 @@ javac.classpath=\
     ${file.reference.jna-3.0.9.jar}:\
     ${file.reference.jna-3.3.0-platform.jar}:\
     ${file.reference.slf4j.api-1.6.1.jar}:\
-    ${file.reference.slf4j-simple-1.6.1.jar}
+    ${file.reference.slf4j-simple-1.6.1.jar}:\
+    ${file.reference.bsh-2.0b5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
-javac.deprecation=false
+javac.deprecation=true
 javac.external.vm=true
+javac.modulepath=
+javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
@@ -208,11 +218,14 @@ javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
+javac.test.modulepath=\
+    ${javac.modulepath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
 javadoc.author=true
 javadoc.encoding=${source.encoding}
+javadoc.html5=false
 javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
@@ -221,6 +234,8 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=true
 javadoc.windowtitle=AskChat
+jlink.launcher=false
+jlink.launcher.name=AskChat
 jnlp.codebase.type=no.codebase
 jnlp.descriptor=application
 jnlp.enabled=false
@@ -251,9 +266,13 @@ run.classpath=\
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
 run.jvmargs=
+run.modulepath=\
+    ${javac.modulepath}
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
+run.test.modulepath=\
+    ${javac.test.modulepath}
 source.encoding=UTF-8
 src.dir=src
 test.src.dir=test
