--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -12,14 +12,15 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 11
+    - name: Set up JDK 11 for x64
       uses: actions/setup-java@v2
       with:
         java-version: '11'
         distribution: 'adopt'
+        architecture: x64
     - name: Build with Ant
       run: ant -noinput -buildfile build.xml
