--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,8 +3,8 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.desc=Fastest Chat App
-application.splash=C:\\Users\\Sijan\\Documents\\asklogo-black (1).png
+application.desc=A Chat App by sijan bhandari
+application.splash=
 application.title=AskChat
 application.vendor=Sijan
 auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
@@ -45,7 +45,6 @@ file.reference.bsh-2.0b5.jar=lib/bsh-2.0b5.jar
 file.reference.checker-compat-qual-2.5.5.jar=lib/checker-compat-qual-2.5.5.jar
 file.reference.commons-codec-1.15.jar=lib/commons-codec-1.15.jar
 file.reference.commons-logging-1.1.3.jar=lib/commons-logging-1.1.3.jar
-file.reference.commons-logging-1.2.1.1.jar=../commons-logging-1.2.1.1.jar/commons-logging-1.2.1.1.jar
 file.reference.commons-logging-1.2.jar=lib/commons-logging-1.2.jar
 file.reference.conscrypt-openjdk-uber-2.5.1.jar=lib/conscrypt-openjdk-uber-2.5.1.jar
 file.reference.error_prone_annotations-2.7.1.jar=lib/error_prone_annotations-2.7.1.jar
@@ -92,6 +91,7 @@ file.reference.jackson-core-lgpl-0.9.7.jar=lib/jackson-core-lgpl-0.9.7.jar
 file.reference.jackson-mapper-asl-1.5.0.jar=lib/jackson-mapper-asl-1.5.0.jar
 file.reference.jackson-mapper-asl-1.5.0__1_.jar=lib/jackson-mapper-asl-1.5.0 (1).jar
 file.reference.javax.annotation-api-1.3.2.jar=lib/javax.annotation-api-1.3.2.jar
+file.reference.javax.mail.jar=lib/javax.mail.jar
 file.reference.jna-3.0.9.jar=lib/jna-3.0.9.jar
 file.reference.jna-3.3.0-platform.jar=lib/jna-3.3.0-platform.jar
 file.reference.jsr305-3.0.2.jar=lib/jsr305-3.0.2.jar
@@ -128,7 +128,6 @@ javac.classpath=\
     ${file.reference.apache-logging-log4j.jar}:\
     ${file.reference.api-common-1.10.4.jar}:\
     ${file.reference.auto-value-annotations-1.8.1.jar}:\
-    ${file.reference.commons-logging-1.2.1.1.jar}:\
     ${file.reference.checker-compat-qual-2.5.5.jar}:\
     ${file.reference.commons-codec-1.15.jar}:\
     ${file.reference.commons-logging-1.1.3.jar}:\
@@ -204,7 +203,8 @@ javac.classpath=\
     ${file.reference.jna-3.3.0-platform.jar}:\
     ${file.reference.slf4j.api-1.6.1.jar}:\
     ${file.reference.slf4j-simple-1.6.1.jar}:\
-    ${file.reference.bsh-2.0b5.jar}
+    ${file.reference.bsh-2.0b5.jar}:\
+    ${file.reference.javax.mail.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=true
@@ -245,7 +245,7 @@ jnlp.signed=false
 jnlp.signing=
 jnlp.signing.alias=
 jnlp.signing.keystore=
-main.class=MainClass.MainLoader
+main.class=Main.MainClass
 # Optional override of default Application-Library-Allowable-Codebase attribute identifying the locations where your signed RIA is expected to be found.
 manifest.custom.application.library.allowable.codebase=
 # Optional override of default Caller-Allowable-Codebase attribute identifying the domains from which JavaScript code can make calls to your RIA without security prompts.
